# QPM.Package

./: .gitignore  Cargo.toml  README.md  build.rs  qpm.schema.json  qpm.shared.schema.json
src/: dependency.rs  gen-schema.rs  lib.rs  package.rs
src/extensions/: mod.rs  package_metadata.rs  serde_utils.rs  workspace.rs
src/models/: backend.rs  dependency.rs  extra.rs  mod.rs  package.rs  qpackages.rs  qpkg.rs  schema_impls.rs  shared_package.rs  triplet.rs  version_req.rs  workspace.rs
