[package]
name = "qpm_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
