[package]
name = "qpm_package"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
schemars = { version = "0.8", features = ["semver"]}


[build-dependencies]
semver = { version = "1.0", features = ["serde"] }

[[bin]]
name = "gen-schema"
path = "src/gen-schema.rs"

[features]
default = []
schemars = []